The proper rendering of this abbreviation is “i.e.

--- a/03-structure.Rmd
+++ b/03-structure.Rmd
@@ -106,7 +106,7 @@ We will come back to testing in Chapter 11: "Build Yourself a Safety Net".
 Oh, and it would also be nice if people could get a `tar.gz` and install it on their computer and have access to a local copy of the app!
 Or if we could install that on the server without any headache!
 
-When adopting the package structure, you can use classical tools to locally install your `{shiny}` application, *i.e* as any other R package, built as a `tar.gz`.
+When adopting the package structure, you can use classical tools to locally install your `{shiny}` application, i.e. as any other R package, built as a `tar.gz`.
 On a server, be it RStudio products or as Docker containers, the package infrastructure will also allow you to leverage the native R tools to build, install and launch R code.
 
 More about this in chapter \@ref(deploy).
@@ -160,7 +160,7 @@ Let us first untangle this quote with an example about the `{shiny}` namespace p
 A big `{shiny}` application usually requires reusing pieces of the UI/server, which makes it hard to name and identify similar inputs and outputs.
 
 `{shiny}` requires its outputs and inputs to have a **unique id**.
-And, unfortunately, we cannot bypass that: when you send a plot **from R to the browser**, i.e from the `server` to the `ui`, the browser needs to know exactly where to put this element.
+And, unfortunately, we cannot bypass that: when you send a plot **from R to the browser**, i.e. from the `server` to the `ui`, the browser needs to know exactly where to put this element.
 This "exactly where" is handled through the use of an `id`.
 Ids are not `{shiny}` specific: they are at the very root of the way web pages work.
 Understanding all of this is not the purpose of this chapter: just remember that `{shiny}` input and output ids **have** to be unique, just as any id on a web page, so that the browser knows where to put what it receives from R, and R knows what to listen to from the browser.
