--- a/04-golem.Rmd
+++ b/04-golem.Rmd
@@ -99,7 +99,7 @@ In other words, most of the time you will not interact with it directly, but thr
 
 The `NAMESPACE` file is the file you will NEVER edit by hand!
 **It defines how to interact with the rest of the package**: what functions to import and from which package and what functions to export, *i.e.* what functions are available to the user when you do `library(golex)`.
-This file will be built when running the documenting process in your R package, i.e when doing `devtools::document()`, or more specifically in our case `golem::document_and_reload()`.
+This file will be built when running the documenting process in your R package, i.e. when doing `devtools::document()`, or more specifically in our case `golem::document_and_reload()`.
 This process will build the `man/` files and fill the `NAMESPACE`, by scanning the `{roxygen}` tags in your `.R` files.
 
 If you want to learn more about these files, here are some resources you can refer to:
@@ -120,7 +120,7 @@ Note that these files are the "core" features of your application itself, and th
 For example, when you will need to deploy your application on RStudio platforms, `{golem}` will create an `app.R` at the root of your directory [^golem-1] .
 The `dev/` folder also contains `.R` scripts, and they are inside this folder as they should not live inside the `R/` folder: they are utilitarian files used during development, not core functionalities of your application.
 
-[^golem-1]: `{golem}` will automatically add this file to the `.Rbuildignore` file, *i.e* make it be ignored by the package build process.
+[^golem-1]: `{golem}` will automatically add this file to the `.Rbuildignore` file, i.e. make it be ignored by the package build process.
 
 Inside these `.R` files, contained inside the `R/` folder, you will find the content of your modules (the one added with `golem::add_modules()`) and the utilitarian/business logic functions, built with `golem::add_utils()` and `golem::add_fct()`.
 
