--- a/06-ux-matters.Rmd
+++ b/06-ux-matters.Rmd
@@ -5,7 +5,7 @@
 Let's state the truth: no matter how complex and innovative your back-end is, your application is bad if your user experience (UX) is bad.
 That's the hard truth.
 
-We have a natural tendency, as R-coders, to be focused on the back-end, i.e the server part of the application [^ux-matters-1] , which is perfectly normal---chances are you did not come to R to design front-ends [^ux-matters-2]
+We have a natural tendency, as R-coders, to be focused on the back-end, i.e. the server part of the application [^ux-matters-1] , which is perfectly normal---chances are you did not come to R to design front-ends [^ux-matters-2]
 .
 
 [^ux-matters-1]: e.g., what happens on the server side of a `{shiny}` app
@@ -365,7 +365,7 @@ server <- function(
 ){
   output$plt <- renderPlot({
     # If the length of the input is 0 
-    # (i.e nothing is selected),we show 
+    # (i.e. nothing is selected),we show 
     # a feedback to the user in the form of a text
     # If the length > 0, we remove the feedback.
     if (length(input$species) == 0){
