--- a/09-prototyping.Rmd
+++ b/09-prototyping.Rmd
@@ -249,7 +249,7 @@ And also, developing in multiple Rmd files helps the separation of work between 
 
 Working with the `{golem}` [@R-golem] framework implies that you will build the application as an R package.
 And of course, an R package implies writing documentation: one of the main goals of the Vignettes, in an R package, is to document how to use the package.
-And the good news is that when checking a package, *i.e* when running `check()` from `{devtools}` [@R-devtools] or `R CMD check`, the Vignettes are going to be built, and the process will fail if at least one of the Vignettes fails to render.
+And the good news is that when checking a package, i.e. when running `check()` from `{devtools}` [@R-devtools] or `R CMD check`, the Vignettes are going to be built, and the process will fail if at least one of the Vignettes fails to render.
 That way, you can use the documentation of the back-end as an extra tool for doing unit testing!
 
 One radical approach to the "Rmd first" philosophy is to write **everything** in an Rmd from the very beginning of your project: write the function code, their roxygen tags, their tests, etc., then move everything to the correct spot in the package infrastructure once you are happy with everything.
