--- a/10-step-by-step-build.Rmd
+++ b/10-step-by-step-build.Rmd
@@ -50,7 +50,7 @@ There are two places where the dependencies of your application need to be manag
     And your application will also have dependencies: at the very least `{shiny}`, `{golem}`, and `{config}`.
     When building your application, you have to list these requirements somewhere, and the standard way to do that is by using the `DESCRIPTION` file[^step-by-step-build-3].
 
--   The `NAMESPACE` file describes how your app interacts with the R session at run time, *i.e* **when your application is launched**.
+-   The `NAMESPACE` file describes how your app interacts with the R session at run time, i.e. **when your application is launched**.
     With this `NAMESPACE` file, you can specify only a subset of functions to import from other packages: for example, you can choose to import only `renderDT()` and `DTOutput()` from `{DT}`, instead of importing all the functions.
     This selective import mechanism allows you to avoid namespace conflicts: for example, between `jsonlite::flatten()` and `purrr::flatten()` [^step-by-step-build-4].
     To do so, we will need to go to every script that defines one or several function/s, and add a `{roxygen2}` [@R-roxygen2] tag, in the following form : `#' @importFrom jsonlite fromJSON` and `#' @importFrom purrr flatten`: that way, you are only importing `fromJSON()` from `{jsonlite}`.
@@ -59,7 +59,7 @@ There are two places where the dependencies of your application need to be manag
 
 [^step-by-step-build-4]: This can be pretty common as `{jsonlite}` might import `JSON` files as list, and `{purrr}` has pretty powerful tools for manipulating lists.
 
-Note that you can also use explicit namespacing, *i.e* the `pkg::function()` notation inside your code.
+Note that you can also use explicit namespacing, i.e. the `pkg::function()` notation inside your code.
 And if you need a little help to identify dependencies, all the explicitly namespaced calls (`pkg::function()`) can be scraped using the `{attachment}` [@R-attachment] package:
 
 ```{r 10-step-by-step-build-2, eval = FALSE}
@@ -239,7 +239,7 @@ Note also that if you want to add the code coverage of your application inside a
 #### B. Continuous Integration {.unnumbered}
 
 Continuous integration, on the other hand, is ensuring the software is still working whenever a change is made by one of the developers.
-The idea is to add to the centralized version control system (for example, Git) [^step-by-step-build-6] a service like Travis CI, GitHub Action (if you are on GitHub), or GitLab CI (for GitLab) that runs a series of commands whenever something is integrated in the repository, *i.e* every time a change to the codebase is made.
+The idea is to add to the centralized version control system (for example, Git) [^step-by-step-build-6] a service like Travis CI, GitHub Action (if you are on GitHub), or GitLab CI (for GitLab) that runs a series of commands whenever something is integrated in the repository, i.e. every time a change to the codebase is made.
 In other words, every time a new piece of code is sent to the central repository, a service runs regression tests that check that the software is still in a valid, working state.
 
 [^step-by-step-build-6]: We will get back to version control in the Chapter \@ref(version-control), "Version Control"..
