--- a/11-step-by-step-secure.Rmd
+++ b/11-step-by-step-secure.Rmd
@@ -20,7 +20,7 @@ The process of getting your application production-ready implies that the applic
 With a robust testing suite, you will develop, maintain, and improve in a safe environment and ensure your project sustainability.
 What will you be testing?
 Both sides of the application: the business logic and the user interface.
-And also, the application load, *i.e* how much time and memory are required when your application starts being used by a significant number of users, be it from the user perspective (how long does it take to complete a full scenario) and from the server perspective (how much memory is needed for my app to run).
+And also, the application load, i.e. how much time and memory are required when your application starts being used by a significant number of users, be it from the user perspective (how long does it take to complete a full scenario) and from the server perspective (how much memory is needed for my app to run).
 
 ### Testing the business logic
 
@@ -232,7 +232,7 @@ test$stop()
 
 #### B. Monkey test {.unnumbered}
 
-If you are working on a user-facing software (i.e a software used by external users), there is one rule to live by: every unexpected behavior that can happen, will happen.
+If you are working on a user-facing software (i.e. a software used by external users), there is one rule to live by: every unexpected behavior that can happen, will happen.
 In other words, if you develop and think "a user will never do that", just expect a user to eventually do "that".
 
 But how can we get prepared for the unexpected?
@@ -876,7 +876,7 @@ fs::dir_tree("data-raw/renvinit/", recurse = 5)
 
 We will not go into details on this folder, as it is a rather complex structure and chances are that you will never have to update it by hand.
 
-With `{renv}`, you can choose to link this "local repository" to a local cache, *i.e* a folder which is common to all your projects and stores packages and the different versions you already installed (this is the default behavior) or to store the complete packages inside the project, making it portable.
+With `{renv}`, you can choose to link this "local repository" to a local cache, i.e. a folder which is common to all your projects and stores packages and the different versions you already installed (this is the default behavior) or to store the complete packages inside the project, making it portable.
 
 When you need a new package, you will have to install it in your local library.
 The fastest way to install new packages in your `{renv}`-powered project is by using the `install.packages` function, which is shimmed by `{renv}`.
