--- a/12-secure.Rmd
+++ b/12-secure.Rmd
@@ -40,7 +40,7 @@ There are many advantages to VC, including:
 -   **It centralizes the codebase**.
     You can use `Git` locally, but its strength also relies on the ability to synchronize your local project with a distant server.
     This also means that *several* people can synchronize with this server and collaborate on a project.
-    That way, changes on a branch on a server can be downloaded (it is called `pull` in `Git` terminology) by all the members of the team, and synchronized locally, *i.e* if someone makes changes to a branch and sends them to the main server, all the other developers can retrieve these changes on their machine.
+    That way, changes on a branch on a server can be downloaded (it is called `pull` in `Git` terminology) by all the members of the team, and synchronized locally, i.e. if someone makes changes to a branch and sends them to the main server, all the other developers can retrieve these changes on their machine.
 
 ### `Git` basics: `add` - `commit` - `push` - `pull`
 
