--- a/13-deploy.Rmd
+++ b/13-deploy.Rmd
@@ -16,11 +16,11 @@ Here is a quick checklist of things to think about once your application is read
 
 -   [ ] `devtools::check()`, run from the command line, returns 0 errors, 0 warnings, and 0 notes.
 
--   [ ] The current version number is valid, *i.e* if the current app is an update, the version number has been bumped.
+-   [ ] The current version number is valid, i.e. if the current app is an update, the version number has been bumped.
 
 -   [ ] Everything is fully documented.
 
--   [ ] Test coverage is good, i.e you cover a sufficient amount of the code base, and these tests cover the core/strategic algorithms
+-   [ ] Test coverage is good, i.e. you cover a sufficient amount of the code base, and these tests cover the core/strategic algorithms
 
 -   [ ] Everyone in the project knows the person to call if something goes wrong.
 
@@ -28,7 +28,7 @@ Here is a quick checklist of things to think about once your application is read
 
 -   [ ] (If relevant) The server it is deployed on has all the necessary software installed (Docker, Connect, `Shiny Server`, etc.) to make the application run.
 
--   [ ] The server has all the system requirements needed (*i.e* the system libraries), and if not, they are installed with the application (if it's dockerized).
+-   [ ] The server has all the system requirements needed (i.e. the system libraries), and if not, they are installed with the application (if it's dockerized).
 
 -   [ ] The application, if deployed on a server, will be deployed on a port which will be accessible by the users.
 
@@ -71,7 +71,7 @@ Then, they can do `library(yourpackagename)` and `run_app()` on their machine.
 
 #### B. Send to a package repository {.unnumbered}
 
-The upside of building the application `{golem}`, *i.e* as a package, is that you can share your application on a remote package manager, the more widely used, for example, on the CRAN like `{dccvalidator}` [@R-dccvalidator], or on BioConductor like `{spatialLIBD}` [@R-spatialLIBD].
+The upside of building the application `{golem}`, i.e. as a package, is that you can share your application on a remote package manager, the more widely used, for example, on the CRAN like `{dccvalidator}` [@R-dccvalidator], or on BioConductor like `{spatialLIBD}` [@R-spatialLIBD].
 But any other package manager will work: for example, if the company uses RStudio Package Manager, your application can be installed here in the same way as any other package.
 If your application is open source, the package structure also allows you to install from GitHub, by using the `remotes::install_github()` function [^deploy-with-golem-1].
 For example, this is what you can do with `{hexmake}` or `{tidytuesday}`: as they are open-source packages, they can be installed from GitHub.
