--- a/15-common-app-caveats.Rmd
+++ b/15-common-app-caveats.Rmd
@@ -8,7 +8,7 @@ Let's face it, reactivity is awesome... until it is not.
 Reactivity is a common source of confusion for beginners, and a common source of bugs and bottlenecks, even for seasoned `{shiny}` developers.
 Most of the time, issues come from the fact that **there is too much reactivity**, *i.e.* we build apps where too many things happen, and some things are updated way more often than they should be, and computations are performed when they should not be, and in the end we have a hard time understanding what is really happening inside our application.
 
-Of course, it is a nice feature to make everything react instantly to changes, but when building larger apps it is easy to create monsters, i.e complicated, messy, reactive graphs where everything is updated too much and too often.
+Of course, it is a nice feature to make everything react instantly to changes, but when building larger apps it is easy to create monsters, i.e. complicated, messy, reactive graphs where everything is updated too much and too often.
 Or worse, we generate endless reactive loops, aka "the reactive inferno" where A invalidates B which invalidates C which invalidates A which invalidates B which invalidates C, and so on.
 
 Let's take a small example of a reactive inferno:
@@ -427,7 +427,7 @@ server <- function(
   session
 ){
   
-  # Mimic an R6 class, i.e a non-reactive object
+  # Mimic an R6 class, i.e. a non-reactive object
   x <- environment()
   
   # Creating two watchers
@@ -608,7 +608,7 @@ Using R6 allows to rely on these battle-tested tools when it comes to testing fu
 
 Getting a good sense of how reactivity is actually working in your app is not an easy task: the reactivity logic is a graph, and it happens very quickly when you run the app, so it's very hard to follow everything.
 
-`whereami::whereami()`'s [@R-whereami] goal is simple: informing you about where it is called, *i.e* from what file and at which line, and how many times.
+`whereami::whereami()`'s [@R-whereami] goal is simple: informing you about where it is called, i.e. from what file and at which line, and how many times.
 For example, if you add the following piece of code to your `app_server()`, the location of the function call will be printed to the logs.
 
 ```{r 15-common-app-caveats-12, eval = FALSE}
@@ -647,7 +647,7 @@ Chances are that to do that, you have been using the `uiOutput()` and `renderUI(
 Even if convenient, and the functions of choice in some specific context, this pair of functions makes R do a little bit too much: you are making R regenerate the whole UI component instead of changing only what you need, which can be a suboptimal, be it from the user point of view, or from a developer perspective.
 
 **One of the instance in which this pattern might not be optimal is in the case where your visitors do not have an high-speed internet or when visiting and using a smartphone, contexts where every byte counts**.
-Rendering large elements from the server side in your `{shiny}` app means that these elements will have to transit through the socket, *i.e* they need to be sent by the server, and downloaded by the browser.
+Rendering large elements from the server side in your `{shiny}` app means that these elements will have to transit through the socket, i.e. they need to be sent by the server, and downloaded by the browser.
 In this case, the smaller the message size the better!
 
 From the developer perspective, you will create code that is harder to reason about, as we are used to having the UI parts in the UI functions (but that is not related to performance).
