--- a/16-optimizing-shiny-code.Rmd
+++ b/16-optimizing-shiny-code.Rmd
@@ -394,7 +394,7 @@ Well, at least natively, as methods have emerged to run pieces of code in parall
 ### How to
 
 To launch code blocks in parallel, we will use a combination of two packages, `{future}` [@R-future] and `{promises}` [@R-promises], and a `reactiveValue()`.
-`{future}` is an R package whose main purpose is to allow users to send code to be run elsewhere, i.e in another session, thread, or even on another machine.
+`{future}` is an R package whose main purpose is to allow users to send code to be run elsewhere, i.e. in another session, thread, or even on another machine.
 `{promises}`, on the other hand, is a package providing structure for handling asynchronous programming in R [^optimizing-shiny-code-4].
 
 [^optimizing-shiny-code-4]: If you are familiar with promises in JavaScript, `{promises}` is an implementation of this structure into R.
@@ -582,7 +582,7 @@ server <- function(
     })
   
   # output$rnorm will be printed whenever rv$output
-  # is available (i.e after around 5 seconds)
+  # is available (i.e. after around 5 seconds)
   output$rnorm <- renderPrint({
     req(rv$output)
   })
