--- a/17-javascript.Rmd
+++ b/17-javascript.Rmd
@@ -48,13 +48,13 @@ What happens under the hood is a little bit complex and out of scope for this bo
 [^javascript-1]: See this post on dev.to <https://dev.to/buzzingbuzzer/comment/g0g> for a quick introduction to the general concept of web sockets.
 
 Most of the time, when the JavaScript side of the websocket receives one of these events, the page the user sees is modified (for example, a plot is drawn).
-On the R end of the websocket, *i.e* when R receives data from the web page, a value is fetched, and something is computed.
+On the R end of the websocket, i.e. when R receives data from the web page, a value is fetched, and something is computed.
 
 It's important to note here that the **communication happens in both directions**: from R to JavaScript, and from JavaScript to R.
 In fact, when we write a piece of code like `sliderInput("first_input", "Select a number", 1, 10, 5)`, what we are doing is creating a binding between JavaScript and R, where the JavaScript runtime (in the browser) listens to any event happening on the slider with the id `"plop"`, and whenever it detects that something happens to this element, something (most of the time its value) is sent back to R, and R does computation based on that value.
 With `output$bla <- renderPlot({})`, what we are doing is making the two communicate the other way around: we are telling JavaScript to listen to any incoming data from R for the `id` `"bla"`, and whenever JavaScript sees incoming data from R, it puts it into the proper HTML tag (here, JavaScript inserts the image received from R in the `<img>` tags with the id `bla`).
 
-Even if everything is written in R, we **are** writing a web application, *i.e*.
+Even if everything is written in R, we **are** writing a web application, i.e..
 HTML, CSS and JavaScript elements.
 Once you have realized that, the possibilities are endless: in fact almost anything doable in a "classic" web app can be done in `{shiny}` with a little bit of tweaking.
 What this also implies is that getting (even a little bit) better at writing HTML, CSS, and especially JavaScript will make your app better, smaller, and more user-friendly, as JavaScript is a language that has been designed to interact with a web page: change element appearances, hide and show things, click somewhere, show alerts and prompts, etc.
@@ -103,7 +103,7 @@ If you are working with `{golem}`, including a JavaScript file is achieved via t
 
 -   `golem::add_js_file("name")`, which adds a standard JavaScript file, i.e. one which is not meant to be used to communicate with R. We'll see in the first part of this chapter how to add JavaScript code there.
 -   `golem::add_js_handler("name")`, which creates a file with a skeleton for `{shiny}` handlers. We'll see this second type of element in the `JavaScript <-> R communication` part.
--   `golem::add_js_binding("name")`, for more advanced use cases, when you want to build your own custom inputs, *i.e* when you want to create a custom HTML element that can be used to interact with `{shiny}`. See [shiny.rstudio.com/articles/js-custom-input.html](https://shiny.rstudio.com/articles/js-custom-input.html) for more information about how to complete this skeleton.
+-   `golem::add_js_binding("name")`, for more advanced use cases, when you want to build your own custom inputs, i.e. when you want to create a custom HTML element that can be used to interact with `{shiny}`. See [shiny.rstudio.com/articles/js-custom-input.html](https://shiny.rstudio.com/articles/js-custom-input.html) for more information about how to complete this skeleton.
 
 OK, good, but what do we do now?
 Note that in this chapter, we will not be covering basic JavaScript object and manipulation.
@@ -145,7 +145,7 @@ Let's detail what we have here:
 
 ### Querying in Vanilla JavaScript
 
-In "Vanilla" JavaScript (i.e without any external plugins installed), you can query these elements using methods from the `document` object.
+In "Vanilla" JavaScript (i.e. without any external plugins installed), you can query these elements using methods from the `document` object.
 For example:
 
 ``` {.javascript}
@@ -477,7 +477,7 @@ R does not do anything with these events when they happen (in fact R is not even
 
 ### From R to JavaScript
 
-Calling JS from the server side (i.e from R) is done by defining a series of `CustomMessageHandler` functions: these are functions with one argument that can then be called using the `session$sendCustomMessage()` method from the server side.
+Calling JS from the server side (i.e. from R) is done by defining a series of `CustomMessageHandler` functions: these are functions with one argument that can then be called using the `session$sendCustomMessage()` method from the server side.
 Or if you are using `{golem}`, using the `invoke_js()` function.
 
 You can define them using this skeleton:
