--- a/19-appendix.Rmd
+++ b/19-appendix.Rmd
@@ -430,7 +430,7 @@ As an example, we will deploy this app in three media: as a package, on RStudio 
 
 -   [x] *Everything is fully documented*: we have documented all the functions, even the internal, there is a Vignette that describes the business logic, and the README is filled.
 
--   [x] *Test coverage is good, i.e you cover a sufficient amount of the code base, and these tests cover the core/strategic algorithms*.
+-   [x] *Test coverage is good, i.e. you cover a sufficient amount of the code base, and these tests cover the core/strategic algorithms*.
 
 -   [x] *The person to call if something goes wrong is clear to everyone involved in the product.*.
 
