--- a/20-session-info.Rmd
+++ b/20-session-info.Rmd
@@ -1,4 +1,4 @@
-# Session Info {-}
+# Appendix B - Session Info {-}
 
 The current version of this book has been compiled on:
 
@@ -6,7 +6,7 @@ The current version of this book has been compiled on:
 Sys.Date()
 ```
 
-With the following configuration:
+with the following configuration:
 
 ```{r 20-session-info-2, eval = FALSE}
 xfun::session_info()
