--- a/chapter-abstracts.Rmd
+++ b/chapter-abstracts.Rmd
@@ -121,7 +121,7 @@ Inside this chapter will be described how to add external dependencies to your a
 
 The fourth part of the workflow is described in chapter 11 and 12. 
 
-In this chapter 11, we come back in more details on the importance of testing your application, and on the toolkit `{shiny}` developers can leverage to test their applications: `{testthat}` for the business logic, `puppeteer`, `{shinytest}` and `{crrry}` for the front-end, and `{shinyloadtest}` and `{dockerstats}` for the application load, i.e the computer resources necessary to make your application work. 
+In this chapter 11, we come back in more details on the importance of testing your application, and on the toolkit `{shiny}` developers can leverage to test their applications: `{testthat}` for the business logic, `puppeteer`, `{shinytest}` and `{crrry}` for the front-end, and `{shinyloadtest}` and `{dockerstats}` for the application load, i.e. the computer resources necessary to make your application work. 
 
 In this chapter, we will also present two tools that are crucial to reproducibility: `{renv}`, a package to manage local dependencies at a project level, and `Docker`, one of the most popular software today to write and deploy software.
 
@@ -187,9 +187,9 @@ First, focusing on the R code itself. Then, caching elements. Caching is the pro
 
 ## Chapter Number & Title – Chapter 17, Using JavaScript
 
-One of the best way to enhance your application, on the long run, is to get comfortable with JavaScript, a scripting language that runs in your web browser. 
+One of the best way to enhance your application, in the long run, is to get comfortable with JavaScript, a scripting language that runs in your web browser. 
 
-With JavaScript, you'll be able to enhance the user experience by leveraging in-browser events, and lower the computation performed by R as you can perform them inside the browser, leaving more space to the server for computation. And on the long run, when you're comfortable with JavaScript, a whole world of `{shiny}` extensions opens. 
+With JavaScript, you'll be able to enhance the user experience by leveraging in-browser events, and lower the computation performed by R as you can perform them inside the browser, leaving more space to the server for computation. And in the long run, when you're comfortable with JavaScript, a whole world of `{shiny}` extensions opens. 
 
 But in the meantime, you might be looking for a place to start. Search no more, this chapter is the perfect place to get started with JavaScript for `{shiny}`.
 
