--- a/01-big-shiny.Rmd
+++ b/01-big-shiny.Rmd
@@ -17,7 +17,7 @@ And that is probably one of the main reasons why this package has become so succ
 The first version of `{shiny}` was published in 2012.
 Since then, it has been one of the top projects of the RStudio team.
 At the time of writing these lines (April 2020), there are more than 4700 commits in the master branch of the GitHub repository, made by 46 contributors.
-It is now downloaded around 400K times a month, according to [cranlogs](https://cranlogs.r-pkg.org/badges/shiny), and has `r length(devtools::revdep("shiny"))` reverse dependencies (i.e packages that depend on it), according to `revdep("shiny")` from `{devtools}` [@R-devtools].
+It is now downloaded around 400K times a month, according to [cranlogs](https://cranlogs.r-pkg.org/badges/shiny), and has `r length(devtools::revdep("shiny"))` reverse dependencies (i.e. packages that depend on it), according to `revdep("shiny")` from `{devtools}` [@R-devtools].
 
 If you are very new to `{shiny}`, this book might feel a little bit overwhelming: we will be discussing some advanced `{shiny}` and software engineering methods, best practices and structural ideas for sending `{shiny}` applications to production.
 This book relies on the assumption that you already know how to build basic `{shiny}` applications, and that you want to push your `{shiny}` skills to the next level: in other words, you are ready to move from the Proof of Concept to the production-grade application.
@@ -33,7 +33,7 @@ Ready to start engineering production-grade `{shiny}` apps?
 ### Reaching the cliff of complexity
 
 Building a `{shiny}` application seems quite straightforward when it comes to small prototypes or proof of concepts: after a few hours of practice and documentation reading, most R developers can have a small working application.\
-But things change when your application reaches "the cliff of complexity" [^big-shiny-2] , *i.e* that moment when the application reaches a state when it can be qualified as "complex".
+But things change when your application reaches "the cliff of complexity" [^big-shiny-2] , i.e. that moment when the application reaches a state when it can be qualified as "complex".
 
 [^big-shiny-2]: We borrow this term from Charity Major, as heard in *Test in Production with Charity Majors* CoRecursive #019, _Aug 31, 2018_.
 
