The usage of “code base” is inconsistent.

--- a/index.Rmd
+++ b/index.Rmd
@@ -133,7 +133,7 @@ This is what this book is about: building `{shiny}` applications that can be use
 
 ## Book structure {-}
 
-+ Part 1, "Building Successful `{shiny}` Apps" gives a __general context for what we mean by "production-grade" and "successful" `{shiny}` application, and what challenges arise when you are dealing with a large-scale application designed for production__. 
++ Part 1, "Building Successful `{shiny}` apps" gives a __general context for what we mean by "production-grade" and "successful" `{shiny}` application, and what challenges arise when you are dealing with a large-scale application designed for production__. 
 In this part, we will define what we mean by "Successful", stress the importance of project management, develop how to structure your project for production, and introduce the `{golem}` [@R-golem] package.
 We will finally briefly introduce to our development workflow: a workflow that will be explored in Parts 2 to 6.
 
