Capitalize “chapter” when followed by a number

--- a/02-planning-ahead.Rmd
+++ b/02-planning-ahead.Rmd
@@ -120,9 +120,9 @@ We strongly suggest that you use git with a graphical interface (GitLab, GitHub,
 These tasks are defined as issues, and will be closed during development.
 These interfaces can also be used to set continuous integration.
 
-If the team follows a `git flow` (described in chapter \@ref(version-control)), the manager will also be in charge of reviewing and accepting the pull/merge requests to the main `dev` branch if they solve the associated issues.
+If the team follows a `git flow` (described in Chapter \@ref(version-control)), the manager will also be in charge of reviewing and accepting the pull/merge requests to the main `dev` branch if they solve the associated issues.
 
-Do not worry if this sounds like a foreign language to you, we will get back to this method later in this book (chapter \@ref(version-control)).
+Do not worry if this sounds like a foreign language to you, we will get back to this method later in this book (Chapter \@ref(version-control)).
 
 #### B. Developers {.unnumbered}
 
