--- a/03-structure.Rmd
+++ b/03-structure.Rmd
@@ -109,7 +109,7 @@ Or if we could install that on the server without any headache!
 When adopting the package structure, you can use classical tools to locally install your `{shiny}` application, i.e. as any other R package, built as a `tar.gz`.
 On a server, be it RStudio products or as Docker containers, the package infrastructure will also allow you to leverage the native R tools to build, install and launch R code.
 
-More about this in chapter \@ref(deploy).
+More about this in Chapter \@ref(deploy).
 
 #### `{shiny}` app as a package, a checklist {.unnumbered}
 
@@ -760,7 +760,7 @@ Its particularity is that if **it's modified inside a function, this modified va
 
 As this R6 object is not a reactive object and is not meant to be used as such, uncontrolled reactivity of the application is reduced, thus reduces the complexity of handling chain reactions across modules.
 Of course, you need to have another special tool in your app to trigger elements.
-All this will be explained in detail in chapter \@ref(common-app-caveats) of this book, and you can find an example of this pattern inside the [`{hexmake}`](https://github.com/ColinFay/hexmake/blob/master/R/R6.R) [@R-hexmake] application.
+All this will be explained in detail in Chapter \@ref(common-app-caveats) of this book, and you can find an example of this pattern inside the [`{hexmake}`](https://github.com/ColinFay/hexmake/blob/master/R/R6.R) [@R-hexmake] application.
 
 If you are eager to know more about what `{R6}` is and how it works, we suggest the chapter on this subject in *Advanced R* [@hadleywickham2019], [R6](https://adv-r.hadley.nz/r6.html).
 
