--- a/10-step-by-step-build.Rmd
+++ b/10-step-by-step-build.Rmd
@@ -152,7 +152,7 @@ And right now, to add a new testing file, you can call:
 usethis::use_test("app")
 ```
 
-More on testing in chapter \@ref(build-yourself-safety-net).
+More on testing in Chapter \@ref(build-yourself-safety-net).
 
 ## Documentation and code coverage
 
