--- a/12-secure.Rmd
+++ b/12-secure.Rmd
@@ -195,7 +195,7 @@ If you want to learn more about `Git`, here are some resources that have helped 
 
 ## Automated testing
 
-We have seen in chapter \@ref(build-yourself-safety-net) how to build a testing infrastructure for your app, notably using the `{testthat}` [@R-testthat] package.
+We have seen in Chapter \@ref(build-yourself-safety-net) how to build a testing infrastructure for your app, notably using the `{testthat}` [@R-testthat] package.
 What we have described is a way to build it locally, before running your test on your own machine.
 But there is a big flaw to this approach: you have to remember to run the tests, be it regularly or before making a pull request/pushing to the server.
 To do this kind of job, you will be looking for **a tool to do automated testing at the repository level: in other words, a software that can test your application whenever a piece of code is pushed/moved on the repository**.
