--- a/15-common-app-caveats.Rmd
+++ b/15-common-app-caveats.Rmd
@@ -885,7 +885,7 @@ server <- function(
 shinyApp(ui, server)
 ```
 
--   Both these functions take a `jQuery` selector to select the element in the UI. We will introduce these selectors in chapter \@ref(#using-javascript).
+-   Both these functions take a `jQuery` selector to select the element in the UI. We will introduce these selectors in Chapter \@ref(using-javascript).
 
 ### Too much data in memory
 
