“Git” is the proper name of a piece of software and should thus be capitalized

--- a/01-big-shiny.Rmd
+++ b/01-big-shiny.Rmd
@@ -255,7 +255,7 @@ if (
 
 ```{r 01-big-shiny-9}
 # Calling the function on the {hexmake} 
-# application git repository
+# application Git repository
 hexmake_cloc <- cloc_git(
   "https://github.com/ColinFay/hexmake"
 )
