--- a/02-planning-ahead.Rmd
+++ b/02-planning-ahead.Rmd
@@ -116,7 +116,7 @@ The project manager will be the one that kicks off the project, and writes the f
 If you follow this book's workflow, this person will first create a `{golem}` project, fill in the information, and define the application structure by providing the main modules, and potentially work on the prototyped UI of the app.
 
 Once the skeleton of the app is created, this person in charge will list all the things that have to be done.
-We strongly suggest that you use git with a graphical interface (GitLab, GitHub, Bitbucket, etc.) as the graphical interface to help you manage the project.
+We strongly suggest that you use Git with a graphical interface (GitLab, GitHub, Bitbucket, etc.) as the graphical interface to help you manage the project.
 These tasks are defined as issues, and will be closed during development.
 These interfaces can also be used to set continuous integration.
 
