--- a/08-step-by-step-prototype.Rmd
+++ b/08-step-by-step-prototype.Rmd
@@ -112,7 +112,7 @@ usethis::use_lifecycle_badge( "Experimental" )
 usethis::use_news_md( open = FALSE )
 ```
 
-It's also where you will be invited to use `git`:
+It's also where you will be invited to use `Git`:
 
 ```{r 08-step-by-step-prototype-6, eval = FALSE}
 usethis::use_git()
