--- a/12-secure.Rmd
+++ b/12-secure.Rmd
@@ -94,7 +94,7 @@ In a perfect world, you never work directly on this branch: it should always con
 Other branches are to be thought of as work areas, where developers fix bugs or add features.
 The modifications made in these development branches will then be transferred (directly or indirectly) to the main branch.
 
-(ref:gitbranchcap) Branches in git.
+(ref:gitbranchcap) Branches in Git.
 
 ```{r 12-secure-1, echo=FALSE, fig.cap="(ref:gitbranchcap)", out.width='100%'}
 knitr::include_graphics("img/Git_branches_fork.png")
